--- a/modules/postfix/templates/main.cf.erb
+++ b/modules/postfix/templates/main.cf.erb
@@ -28,7 +28,7 @@ smtp_tls_session_cache_database = btree:${data_directory}/smtp_scache
 # information on enabling SSL in the smtp client.
 
 smtpd_relay_restrictions = permit_mynetworks permit_sasl_authenticated defer_unauth_destination
-relay_domains = $mydestination, erine.email
+relay_domains = $mydestination, hash:/etc/postfix/relaydomains
 smtpd_recipient_restrictions = reject_unauth_destination
 myhostname = <%= @fqdn %>
 alias_maps = hash:/etc/aliases
