Move from Debian 8 to Debian 9
Use a Puppet 4.8 and Hiera 3.3 compatible syntax.
At this commit, the whole repository is compatible with Debian 8 and
Debian 9. But the compatibility won't be tested in next releases.

--- a/modules/base/templates/bash.bashrc.erb
+++ b/modules/base/templates/bash.bashrc.erb
@@ -21,16 +21,16 @@ fi
 # Forget black, enjoy color
 case "$TERM" in
   xterm-256color)
-<%- if scope.function_hiera(["domainnames"]).length == 1 -%>
-<%- domain = scope.function_hiera(["domainnames"])[0] -%>
+<%- if @domainnames.length == 1 -%>
+<%- domain = @domainnames[0] -%>
     PS1='${debian_chroot:+($debian_chroot)}\[$(tput setaf 12)\]\u@\h-\[$(tput setaf 44)\]<%= domain %>\[$(tput setaf 12)\]:\w\$ \[$(tput sgr0)\]'
 <%- else -%>
     PS1='${debian_chroot:+($debian_chroot)}\[$(tput setaf 12)\]\u@\h:\w\$ \[$(tput sgr0)\]'
 <%- end -%>
     ;;
   *)
-<%- if scope.function_hiera(["domainnames"]).length == 1 -%>
-<%- domain = scope.function_hiera(["domainnames"])[0] -%>
+<%- if @domainnames.length == 1 -%>
+<%- domain = @domainnames[0] -%>
     PS1='${debian_chroot:+($debian_chroot)}\[$(tput setaf 6)\]\u@\h-<%= domain %>:\w\$ \[$(tput sgr0)\]'
 <%- else -%>
     PS1='${debian_chroot:+($debian_chroot)}\[$(tput setaf 6)\]\u@\h:\w\$ \[$(tput sgr0)\]'
