--- a/modules/postfix/templates/relaydomains.erb
+++ b/modules/postfix/templates/relaydomains.erb
@@ -1,3 +1,3 @@
-<%- for domain in scope.function_hiera(["domainnames"]) -%>
+<%- for domain in @domainnames -%>
 <%= domain %> #<%= domain %>
 <%- end -%>
